[project]
name = "dchubs-api"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlacodegen>=4.0.4",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.50.2",
]



[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.pytest.ini_options]
pythonpath = [".", "app"]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-config=.coveragerc"
]
strict_xfail = true
filterwarnings = [
    "error",
]
timeout = "20"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ty.environment]
python-version = "3.13"
python = ".venv"

[tool.ty.src]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/tests/**"
]

[tool.ty.rules]
unused-ignore-comment = "warn"
unresolved-import = "error"

unresolved-attribute = "error"
unresolved-reference = "error"

possibly-missing-import = "error"
possibly-missing-attribute = "error"

[tool.ruff]
line-length = 100
fix = true
extend-per-file-ignores = {"models/*.py" = ["UP037"], "db/__init__.py" = ["F403", "TID252"]}

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "TID",
    "G", # flake8-logging-format
    "PERF", # perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",
    "B008",
    "C901",
    "W191",
    "RUF012",
    "ANN", # Mypy is better at this
    "E722",
    "RUF003",
    "RUF002"
]
fixable = ["ALL"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-third-party = ["pydantic"]
force-sort-within-sections = true
from-first = false
